# instagram-cli

./: .env.sample  .gitignore  CHANGELOG.md  README.md  pyproject.toml
instagram_cli/: __init__.py  auth.py  cli.py  client.py  utils.py
