[tool.poetry]
name = "instagram-cli"
version = "0.1.0"
description = "Easy-to-use Instagram CLI for creating and managing accounts and stats from your terminal"
authors = ["Alex Colls Outumuro"]
license = "MIT"
readme = "README.md"
packages = [{include = "instagram_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
instagrapi = "^2.1.2"
click = "^8.1.7"
python-dotenv = "^1.0.1"
rich = "^13.7.1"

[tool.poetry.scripts]
instagram-cli = "instagram_cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
